--- a/scss/sections/new_arrivals.scss
+++ b/scss/sections/new_arrivals.scss
@@ -1,84 +1,76 @@
 .new-arriv {
-    max-width: 1920px;
-    margin-inline: auto;
     margin-bottom: 190px;
+
+    &__container {
+        padding: 0 104px;
+    }
+    
+    &__title {
+        font-family: var(--main-font);
+        font-weight: 900;
+        font-size: 48px;
+        line-height: 104%;
+        letter-spacing: 0.06em;
+        color: var(--c-black);
+        margin-bottom: 101px;
+        position: relative;
+        display: inline-block;
+        padding-bottom: 8px;
+        padding-right: 8px;
+    }
+    
+    &__title .yellow_wave2 {
+        position: absolute;
+        max-width: 186px;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+    }
+    
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 90px;
+    }
+    
+    &__item_box {
+        flex: 0 1 calc((100% - 90px * 2)/3);
+        display: flex;
+        flex-direction: column;
+    }
+    
+    &__item_image {
+        margin-bottom: 28px;
+        border-radius: 20px;
+        cursor: pointer;
+
+        & img {
+            border-radius: 20px;
+
+            &:hover {
+                transform: scale(1.05);
+                box-shadow: 0 0 5px 1px rgba(0, 0, 0, 1), 0 0 20px 0 rgba(235, 217, 107, 0.5);
+            }
+        }
+    }
+    
+    &__item_desc {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+    }
+    
+    &__item_text h3 {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 32px;
+        line-height: 156%;
+        letter-spacing: -0.04em;
+        color: #191919;
+    }
 }
 
-.new-arriv__container {
-    padding: 0 104px;
-}
 
-.new-arriv__title {
-    font-family: var(--main-font);
-    font-weight: 900;
-    font-size: 48px;
-    line-height: 104%;
-    letter-spacing: 0.06em;
-    color: var(--c-black);
-    margin-bottom: 101px;
-    position: relative;
-    display: inline-block;
-    padding-bottom: 8px;
-    padding-right: 8px;
-}
 
-.new-arriv__title .yellow_wave2 {
-    position: absolute;
-    max-width: 186px;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-}
-
-.new-arriv__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 90px;
-}
-
-.new-arriv__item_box {
-    flex: 0 1 calc((100% - 90px * 2)/3);
-    display: flex;
-    flex-direction: column;
-}
-
-.new-arriv__item_image {
-    margin-bottom: 28px;
-    border-radius: 20px;
-    cursor: pointer;
-}
-
-.new-arriv__item_image img {
-    border-radius: 20px;
-}
-
-.new-arriv__item_image img:hover, .young-fav__item_image img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 1), 0 0 20px 0 rgba(235, 217, 107, 0.5);
-}
-
-.new-arriv__item_desc {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-}
-
-.new-arriv__item_text h3 {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 156%;
-    letter-spacing: -0.04em;
-    color: #191919;
-}
-
-.explore_now {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 208%;
-    letter-spacing: -0.04em;
-    color: #7f7f7f;
-}
