--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,7 @@
 @import 'base';
 
 // sections
+@import 'sections/header.scss';
 @import 'sections/welcome';
 @import 'sections/brands';
 @import 'sections/new_arrivals';
