--- a/scss/sections/new_arrivals.scss
+++ b/scss/sections/new_arrivals.scss
@@ -45,12 +45,12 @@
         border-radius: 20px;
         cursor: pointer;
 
-        & img {
+        img {
             border-radius: 20px;
 
             &:hover {
-                transform: scale(1.05);
-                box-shadow: 0 0 5px 1px rgba(0, 0, 0, 1), 0 0 20px 0 rgba(235, 217, 107, 0.5);
+                transform: scale(1.02);
+                box-shadow: 0 0 2px 1px rgba(67, 62, 4, 0.5), 0 0 20px 0 rgba(235, 217, 107, 0.5);
             }
         }
     }
@@ -60,7 +60,25 @@
         justify-content: space-between;
         align-items: center;
         cursor: pointer;
+
+        &:hover .new-arriv__item_text p {
+            color: var(--c-yellow-main);
+        }
+        &:hover .new-arriv__item_arrow {
+            transform: scale(1.2);
+        }
+        &:hover .new-arriv__item_arrow .arrow svg path {
+            fill: var(--c-yellow-main);
+        }
     }
+
+    // &__item_text:hover > h3 {
+    //     color: var(--c-yellow-main);
+    // }
+
+    // &__item_text:hover + &__item_arrow {
+    //     
+    // }
     
     &__item_text h3 {
         font-family: var(--main-font);
@@ -69,6 +87,12 @@
         line-height: 156%;
         letter-spacing: -0.04em;
         color: #191919;
+    }
+
+    &__item_arrow {
+        align-self: stretch;
+        display: flex;
+        align-items: center;
     }
 }
 
