--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,5 +1,6 @@
 // breakpoints
-$desktop: 1200px;
+$desktop: 1536px;
+$desktop-small: 1200px;
 $tablet: 992px;
 $tablet-small: 768px;
 $mobile: 576px;
@@ -9,7 +10,7 @@ $mobile: 576px;
 	--second-font: Roboto, sans-serif;
     --third-font: "Inter", sans-serif;
 	
-	--transition: .3s all ease-in-out;
+	--transition: .2s all ease-in-out;
 
 	--c-white: #fff;
 	--c-black: #000;
